// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tutorial Test Suite via Socket.io > Test Tutorials > Move should be able to be performed 1`] = `
{
  "game": {
    "colors": [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coop": false,
    "created": 0,
    "game": {
      "activePlayer": 1,
      "aussetzenFlag": false,
      "balls": [
        {
          "player": 0,
          "position": 16,
          "state": "invalid",
        },
        {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "cards": {
        "dealingPlayer": 2,
        "deck": [
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
        ],
        "discardPile": [
          "1",
        ],
        "discardPlayer": 0,
        "meisterVersion": true,
        "players": [
          [
            "5",
            "12",
            "7",
            "8",
          ],
          [
            "1",
            "1",
            "6",
            "tac",
            "engel",
          ],
          [
            "2",
            "2",
            "trickser",
            "1",
            "10",
          ],
          [
            "7",
            "8",
            "8",
            "7",
            "7",
          ],
        ],
      },
      "cardsWithMoves": [
        {
          "ballActions": {
            "4": [
              32,
            ],
            "5": [
              32,
            ],
            "6": [
              32,
            ],
            "7": [
              32,
            ],
          },
          "possible": true,
          "textAction": "",
          "title": "1",
        },
        {
          "ballActions": {
            "4": [
              32,
            ],
            "5": [
              32,
            ],
            "6": [
              32,
            ],
            "7": [
              32,
            ],
          },
          "possible": true,
          "textAction": "",
          "title": "1",
        },
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "6",
        },
        {
          "ballActions": {
            "4": [
              32,
            ],
            "5": [
              32,
            ],
            "6": [
              32,
            ],
            "7": [
              32,
            ],
          },
          "possible": true,
          "textAction": "",
          "title": "tac",
        },
        {
          "ballActions": {
            "10": [
              48,
            ],
            "11": [
              48,
            ],
            "8": [
              48,
            ],
            "9": [
              48,
            ],
          },
          "possible": true,
          "textAction": "",
          "title": "engel",
        },
      ],
      "coop": false,
      "gameEnded": false,
      "nPlayers": 4,
      "narrFlag": [
        false,
        false,
        false,
        false,
      ],
      "priorBalls": [
        {
          "player": 0,
          "position": 0,
          "state": "house",
        },
        {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "sevenChosenPlayer": null,
      "statistic": [],
      "substitutedPlayerIndices": [],
      "teams": [
        [
          0,
          2,
        ],
        [
          1,
          3,
        ],
      ],
      "teufelFlag": false,
      "tradeCards": [
        "",
        "",
        "",
        "",
      ],
      "tradeDirection": -1,
      "tradeFlag": false,
      "winningTeams": [
        false,
        false,
      ],
    },
    "id": 0,
    "lastPlayed": 0,
    "nPlayers": 4,
    "nTeams": 2,
    "playerIDs": [
      0,
      0,
      0,
      0,
    ],
    "players": [
      "Du",
      "-Kai-",
      "-Oskar-",
      "-Sophia-",
    ],
    "rematch_open": false,
    "running": true,
    "status": "running",
    "tournamentid": null,
  },
  "updateData": {
    "aussetzenFlag": false,
    "balls": [
      {
        "player": 0,
        "position": 16,
        "state": "invalid",
      },
      {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "cards": [
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "5",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "12",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "7",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "8",
      },
    ],
    "colors": [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coopCounter": -1,
    "created": 0,
    "deckInfo": [
      2,
      24,
    ],
    "discardPile": [
      "1",
    ],
    "gameEnded": false,
    "gamePlayer": 0,
    "lastPlayed": 0,
    "ownCards": [
      "5",
      "12",
      "7",
      "8",
    ],
    "playernames": [
      "Du",
      "-Kai-",
      "-Oskar-",
      "-Sophia-",
    ],
    "players": [
      {
        "active": false,
        "discarded": true,
        "name": "Du",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 0,
        "remainingCards": 4,
        "team": 0,
      },
      {
        "active": true,
        "discarded": false,
        "name": "-Kai-",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 1,
        "remainingCards": 5,
        "team": 1,
      },
      {
        "active": false,
        "discarded": false,
        "name": "-Oskar-",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 2,
        "remainingCards": 5,
        "team": 0,
      },
      {
        "active": false,
        "discarded": false,
        "name": "-Sophia-",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 3,
        "remainingCards": 5,
        "team": 1,
      },
    ],
    "priorBalls": [
      {
        "player": 0,
        "position": 0,
        "state": "house",
      },
      {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "rematch_open": false,
    "running": true,
    "statistic": [],
    "substitutedPlayerIndices": [],
    "teams": [
      [
        0,
        2,
      ],
      [
        1,
        3,
      ],
    ],
    "teufelFlag": false,
    "tradeDirection": -1,
    "winningTeams": [
      false,
      false,
    ],
  },
}
`;

exports[`Tutorial Test Suite via Socket.io > Test Tutorials > Tutorial step should be loaded for authenticated user 1`] = `
{
  "config": {},
  "game": {
    "colors": [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coop": false,
    "created": 0,
    "game": {
      "activePlayer": 0,
      "aussetzenFlag": false,
      "balls": [
        {
          "player": 0,
          "position": 0,
          "state": "house",
        },
        {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "cards": {
        "dealingPlayer": 2,
        "deck": [
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
        ],
        "discardPile": [],
        "meisterVersion": true,
        "players": [
          [
            "5",
            "1",
            "12",
            "7",
            "8",
          ],
          [
            "1",
            "1",
            "6",
            "tac",
            "engel",
          ],
          [
            "2",
            "2",
            "trickser",
            "1",
            "10",
          ],
          [
            "7",
            "8",
            "8",
            "7",
            "7",
          ],
        ],
      },
      "cardsWithMoves": [
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "5",
        },
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "1",
        },
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "12",
        },
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "7",
        },
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "8",
        },
      ],
      "coop": false,
      "gameEnded": false,
      "nPlayers": 4,
      "narrFlag": [
        false,
        false,
        false,
        false,
      ],
      "priorBalls": [
        {
          "player": 0,
          "position": 0,
          "state": "house",
        },
        {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "statistic": [],
      "teams": [
        [
          0,
          2,
        ],
        [
          1,
          3,
        ],
      ],
      "teufelFlag": false,
      "tradeCards": [
        "",
        "",
        "",
        "",
      ],
      "tradeDirection": -1,
      "tradeFlag": false,
      "winningTeams": [
        false,
        false,
      ],
    },
    "id": 0,
    "lastPlayed": 0,
    "nPlayers": 4,
    "nTeams": 2,
    "playerIDs": [
      0,
      0,
      0,
      0,
    ],
    "players": [
      "Du",
      "-Kai-",
      "-Oskar-",
      "-Sophia-",
    ],
    "rematch_open": false,
    "running": true,
    "status": "running",
    "tournamentid": null,
  },
  "goal": null,
  "updateData": {
    "aussetzenFlag": false,
    "balls": [
      {
        "player": 0,
        "position": 0,
        "state": "house",
      },
      {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "cards": [
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "5",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "1",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "12",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "7",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "8",
      },
    ],
    "colors": [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coopCounter": -1,
    "created": 0,
    "deckInfo": [
      2,
      24,
    ],
    "discardPile": [],
    "gameEnded": false,
    "gamePlayer": 0,
    "lastPlayed": 0,
    "ownCards": [
      "5",
      "1",
      "12",
      "7",
      "8",
    ],
    "playernames": [
      "Du",
      "-Kai-",
      "-Oskar-",
      "-Sophia-",
    ],
    "players": [
      {
        "active": true,
        "discarded": false,
        "name": "Du",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 0,
        "remainingCards": 5,
        "team": 0,
      },
      {
        "active": false,
        "discarded": false,
        "name": "-Kai-",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 1,
        "remainingCards": 5,
        "team": 1,
      },
      {
        "active": false,
        "discarded": false,
        "name": "-Oskar-",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 2,
        "remainingCards": 5,
        "team": 0,
      },
      {
        "active": false,
        "discarded": false,
        "name": "-Sophia-",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 3,
        "remainingCards": 5,
        "team": 1,
      },
    ],
    "priorBalls": [
      {
        "player": 0,
        "position": 0,
        "state": "house",
      },
      {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "rematch_open": false,
    "running": true,
    "statistic": [],
    "teams": [
      [
        0,
        2,
      ],
      [
        1,
        3,
      ],
    ],
    "teufelFlag": false,
    "tradeDirection": -1,
    "winningTeams": [
      false,
      false,
    ],
  },
}
`;

exports[`Tutorial Test Suite via Socket.io > Test Tutorials > Tutorial step should be loaded for unauthenticated user 1`] = `
{
  "config": {},
  "game": {
    "colors": [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coop": false,
    "created": 0,
    "game": {
      "activePlayer": 0,
      "aussetzenFlag": false,
      "balls": [
        {
          "player": 0,
          "position": 0,
          "state": "house",
        },
        {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "cards": {
        "dealingPlayer": 2,
        "deck": [
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
          "8",
          "5",
          "1",
          "12",
          "7",
        ],
        "discardPile": [],
        "meisterVersion": true,
        "players": [
          [
            "5",
            "1",
            "12",
            "7",
            "8",
          ],
          [
            "1",
            "1",
            "6",
            "tac",
            "engel",
          ],
          [
            "2",
            "2",
            "trickser",
            "1",
            "10",
          ],
          [
            "7",
            "8",
            "8",
            "7",
            "7",
          ],
        ],
      },
      "cardsWithMoves": [
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "5",
        },
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "1",
        },
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "12",
        },
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "7",
        },
        {
          "ballActions": {},
          "possible": false,
          "textAction": "",
          "title": "8",
        },
      ],
      "coop": false,
      "gameEnded": false,
      "nPlayers": 4,
      "narrFlag": [
        false,
        false,
        false,
        false,
      ],
      "priorBalls": [
        {
          "player": 0,
          "position": 0,
          "state": "house",
        },
        {
          "player": 0,
          "position": 1,
          "state": "house",
        },
        {
          "player": 0,
          "position": 2,
          "state": "house",
        },
        {
          "player": 0,
          "position": 3,
          "state": "house",
        },
        {
          "player": 1,
          "position": 4,
          "state": "house",
        },
        {
          "player": 1,
          "position": 5,
          "state": "house",
        },
        {
          "player": 1,
          "position": 6,
          "state": "house",
        },
        {
          "player": 1,
          "position": 7,
          "state": "house",
        },
        {
          "player": 2,
          "position": 8,
          "state": "house",
        },
        {
          "player": 2,
          "position": 9,
          "state": "house",
        },
        {
          "player": 2,
          "position": 10,
          "state": "house",
        },
        {
          "player": 2,
          "position": 11,
          "state": "house",
        },
        {
          "player": 3,
          "position": 12,
          "state": "house",
        },
        {
          "player": 3,
          "position": 13,
          "state": "house",
        },
        {
          "player": 3,
          "position": 14,
          "state": "house",
        },
        {
          "player": 3,
          "position": 15,
          "state": "house",
        },
      ],
      "statistic": [],
      "teams": [
        [
          0,
          2,
        ],
        [
          1,
          3,
        ],
      ],
      "teufelFlag": false,
      "tradeCards": [
        "",
        "",
        "",
        "",
      ],
      "tradeDirection": -1,
      "tradeFlag": false,
      "winningTeams": [
        false,
        false,
      ],
    },
    "id": 0,
    "lastPlayed": 0,
    "nPlayers": 4,
    "nTeams": 2,
    "playerIDs": [
      0,
      0,
      0,
      0,
    ],
    "players": [
      "Du",
      "-Kai-",
      "-Oskar-",
      "-Sophia-",
    ],
    "rematch_open": false,
    "running": true,
    "status": "running",
    "tournamentid": null,
  },
  "goal": {
    "modalState": "settings",
  },
  "updateData": {
    "aussetzenFlag": false,
    "balls": [
      {
        "player": 0,
        "position": 0,
        "state": "house",
      },
      {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "cards": [
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "5",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "1",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "12",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "7",
      },
      {
        "ballActions": {},
        "possible": false,
        "textAction": "",
        "title": "8",
      },
    ],
    "colors": [
      "red",
      "green",
      "blue",
      "black",
    ],
    "coopCounter": -1,
    "created": 0,
    "deckInfo": [
      2,
      24,
    ],
    "discardPile": [],
    "gameEnded": false,
    "gamePlayer": 0,
    "lastPlayed": 0,
    "ownCards": [
      "5",
      "1",
      "12",
      "7",
      "8",
    ],
    "playernames": [
      "Du",
      "-Kai-",
      "-Oskar-",
      "-Sophia-",
    ],
    "players": [
      {
        "active": true,
        "discarded": false,
        "name": "Du",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 0,
        "remainingCards": 5,
        "team": 0,
      },
      {
        "active": false,
        "discarded": false,
        "name": "-Kai-",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 1,
        "remainingCards": 5,
        "team": 1,
      },
      {
        "active": false,
        "discarded": false,
        "name": "-Oskar-",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 2,
        "remainingCards": 5,
        "team": 0,
      },
      {
        "active": false,
        "discarded": false,
        "name": "-Sophia-",
        "narrFlag": [
          false,
          false,
        ],
        "playerNumber": 3,
        "remainingCards": 5,
        "team": 1,
      },
    ],
    "priorBalls": [
      {
        "player": 0,
        "position": 0,
        "state": "house",
      },
      {
        "player": 0,
        "position": 1,
        "state": "house",
      },
      {
        "player": 0,
        "position": 2,
        "state": "house",
      },
      {
        "player": 0,
        "position": 3,
        "state": "house",
      },
      {
        "player": 1,
        "position": 4,
        "state": "house",
      },
      {
        "player": 1,
        "position": 5,
        "state": "house",
      },
      {
        "player": 1,
        "position": 6,
        "state": "house",
      },
      {
        "player": 1,
        "position": 7,
        "state": "house",
      },
      {
        "player": 2,
        "position": 8,
        "state": "house",
      },
      {
        "player": 2,
        "position": 9,
        "state": "house",
      },
      {
        "player": 2,
        "position": 10,
        "state": "house",
      },
      {
        "player": 2,
        "position": 11,
        "state": "house",
      },
      {
        "player": 3,
        "position": 12,
        "state": "house",
      },
      {
        "player": 3,
        "position": 13,
        "state": "house",
      },
      {
        "player": 3,
        "position": 14,
        "state": "house",
      },
      {
        "player": 3,
        "position": 15,
        "state": "house",
      },
    ],
    "rematch_open": false,
    "running": true,
    "statistic": [],
    "teams": [
      [
        0,
        2,
      ],
      [
        1,
        3,
      ],
    ],
    "teufelFlag": false,
    "tradeDirection": -1,
    "winningTeams": [
      false,
      false,
    ],
  },
}
`;
